# file-embed

./: .gitignore  .travis.yml  ChangeLog.md  README  README.md  appveyor.yml  file-embed.cabal  inject.hs  mkbin.hs  runtests.hs  stack.yaml  template.hs  test-inject.sh  test.hs
.azure/: azure-linux-template.yml  azure-osx-template.yml  azure-windows-template.yml
.github/workflows/: tests.yml
Data/: FileEmbed.hs
Data/FileEmbed/: Inject.hs
sample/: baz  bin  binary
test/: main.hs
test/injection-test/: inject.hs  template.hs
test/sample/bar/bar/: black
